Update pom dependency page factory